Added recipes for all items

--- a/gradle.properties
+++ b/gradle.properties
@@ -44,7 +44,7 @@ mapping_version=2023.06.26-1.20.1
 # Must match the String constant located in the main mod class annotated with @Mod.
 mod_id=tutorialmod
 # The human-readable display name for the mod.
-mod_name=Tutorial Mod
+mod_name=Ishan's Mod
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=All Rights Reserved
 # The mod version. See https://semver.org/
@@ -54,6 +54,6 @@ mod_version=1.4.1
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=net.ishan.tutorialmod
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=IshanSoni
+mod_authors=Ishan Soni
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Yeah. It's a mod, G O T I T ?
+mod_description=This mod adds your fat mother.
